--- a/requirements.txt
+++ b/requirements.txt
@@ -1,200 +1,11 @@
-altair==4.2.0
-ansible==2.9.6
-apache-libcloud==2.8.0
-appdirs==1.4.4
-apt-clone==0.2.1
-apturl==0.5.2
-argcomplete==1.8.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-astor==0.8.1
-asttokens==2.0.5
-attrs==19.3.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-base58==2.1.1
-beautifulsoup4==4.10.0
-bleach==4.1.0
-blinker==1.4
-block-tracing==1.0.1
-bokeh==2.4.2
-Brlapi==0.7.0
-cached-property==1.5.1
-cachetools==5.0.0
-certifi==2019.11.28
-cffi==1.15.0
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-dbxfs==1.0.63
-debugpy==1.5.1
-decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-Deprecated==1.2.13
-distro==1.4.0
-distro-info===0.23ubuntu1
-dnspython==1.16.0
-docker==4.1.0
-docker-compose==1.25.0
-dockerpty==0.4.1
-docopt==0.6.2
-dropbox==11.28.0
-entrypoints==0.3
-executing==0.8.3
-fusepyng==1.0.7
-gitdb==4.0.9
-GitPython==3.1.27
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==1.5.0
-ipykernel==6.9.1
-ipython==8.1.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jaconv==0.3
-jedi==0.18.1
-Jinja2==2.11.0
-jmespath==0.9.4
+click==8.1.3
+importlib-metadata==4.11.3
 joblib==1.1.0
-jsonschema==3.2.0
-jupyter-client==7.1.2
-jupyter-core==4.9.2
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-kafka-python==2.0.2
-kazam==1.4.5
-keyring==18.0.1
-keyrings.alt==4.1.0
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-MarkupSafe==1.1.0
-matplotlib-inline==0.1.3
-mistune==0.8.4
-more-itertools==4.2.0
-natsort==7.0.1
-nbclient==0.5.13
-nbconvert==6.4.4
-nbformat==5.2.0
-nest-asyncio==1.5.4
-netaddr==0.7.19
-netifaces==0.10.4
 nltk==3.7
-notebook==6.4.8
-ntlm-auth==1.1.0
-numpy==1.22.3
-oauthlib==3.1.0
-olefile==0.46
-packaging==21.3
-PAM==0.4.2
-pandas==1.4.1
-pandocfilters==1.5.0
-paperwork==1.3.1
-paperwork-backend==1.3.1
-parso==0.8.3
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==9.0.1
-ply==3.11
-privy==6.0.0
-prometheus-client==0.13.1
-prompt-toolkit==3.0.28
-protobuf==3.19.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==7.0.0
-PyAudio==0.2.11
-pycairo==1.16.2
-pycountry==19.8.18
-pycparser==2.21
-pycrypto==2.6.1
-pycups==1.9.73
-pydeck==0.7.1
+pkg-resources==0.0.0
 pydub==0.25.1
-Pygments==2.11.2
-PyGObject==3.36.0
-PyICU==2.4.2
-PyJWT==1.7.1
-pykakasi==2.2.1
-pykerberos==1.1.14
-pymacaroons==0.13.0
-Pympler==1.0.1
-PyNaCl==1.3.0
-pyocr==0.7.2
-pyparsing==3.0.7
-pyphen==0.12.0
-pypillowfight==0.3.0
-pyRFC3339==1.1
-pyrsistent==0.15.5
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.8.1
-python-debian===0.1.36ubuntu1
-python-Levenshtein==0.12.0
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-pywinrm==0.3.0
-pyxdg==0.26
-PyYAML==5.3.1
-pyzmq==22.3.0
 regex==2022.4.24
-reportlab==3.5.34
-requests==2.22.0
-requests-kerberos==0.12.0
-requests-ntlm==1.1.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-selinux==3.0
-semver==2.13.0
-Send2Trash==1.8.0
-sentry-sdk==1.5.8
-simplebayes==1.5.8
-simplejson==3.16.0
-six==1.14.0
-smmap==5.0.0
-soupsieve==2.3.1
 SpeechRecognition==3.8.1
-stack-data==0.2.0
-stone==3.3.1
-streamlit==1.3.1
-systemd-python==234
-termcolor==1.1.0
-terminado==0.13.3
-testpath==0.6.0
-textstat==0.7.3
-texttable==1.6.2
-toml==0.10.2
-toolz==0.11.2
-tornado==6.1
 tqdm==4.64.0
-traitlets==5.1.1
-typing-extensions==4.1.1
-tzdata==2021.5
-tzlocal==4.1
-ubuntu-advantage-tools==27.7
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-userspacefs==2.0.5
-validators==0.18.2
-wadllib==1.3.3
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.53.0
-Whoosh==2.7.4
-widgetsnbextension==3.5.2
-wrapt==1.14.0
-xkit==0.0.0
-xmltodict==0.12.0
-zipp==1.0.0
+typing-extensions==4.2.0
+zipp==3.8.0
